ci: add lint gh workflow action

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,8 @@
     "types": ["vite/client"],
     "noEmit": true,
     "isolatedModules": true,
+    "skipLibCheck": true,
   },
+  "include": ["src", "vite.config.ts"],
+  "exclude": ["node_modules", "./dist"],
 }
