--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,6 +8,8 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "rules": {},
+  "rules": {
+    "@typescript-eslint/explicit-function-return-type": "off"
+  },
   "ignorePatterns": ["dist", "postcss.config.js", "tailwind.config.js"]
 }
