--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
-    "solid-js": "^1.8.11",
+    "@thisbeyond/solid-dnd": "^0.7.5",
+    "solid-js": "^1.9.0",
     "solid-toast": "^0.5.0"
   },
   "prettier": {
