--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
-    "@thisbeyond/solid-dnd": "^0.7.5",
+    "@tsparticles/configs": "^3.5.0",
+    "@tsparticles/engine": "^3.5.0",
+    "@tsparticles/solid": "^3.0.0",
     "solid-js": "^1.9.0",
-    "solid-toast": "^0.5.0"
+    "solid-toast": "^0.5.0",
+    "tsparticles": "^3.5.0"
   },
   "prettier": {
     "arrowParens": "always",
