chore: update gha

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -5,18 +5,17 @@ on:
 
 jobs:
   install:
+    name: 'Install and lint'
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
-      - name: Setup pnpm & install packages
-        uses: pnpm/action-setup@v3
+      - uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 9
           run_install: |
             - recursive: true
               args: [--frozen-lockfile, --strict-peer-dependencies]
-            - args: [--global, gulp, prettier, typescript]
       - run: pnpm lint
         name: Lint
